# fakenewsdetector

./: README.md  fake_news_detector.py  pyproject.toml  run.py
src/: fake_news_detector.py  pipeline.py
